maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: not found: value NORD
    if ( isDirectionFree(NORD) && sommeAngle == 0 ){
                         ^